@@ -68,3 +68,4 @@ Version: 0.3.3
 Date: 29.05.2022
   Changes:
     - Decreased braking force to prevent gate crashes on full speed
+    - When a spidertron stands on top of the rails, entering is preferred over the motor car.
